cluster/gallery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gallery
  namespace: backend
  labels:
    app: gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gallery
  template:
    metadata:
      labels:
        app: gallery
    spec:
      containers:
      - name: main
        image: docker.io/vianagallery/gallery-api:stable
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: docker-hub-cred
---
apiVersion: v1
kind: Service
metadata:
  name: gallery
  namespace: backend
  labels:
    app: gallery
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    # protocol: TCP
  selector:
    app: gallery
    # internalTrafficPolicy: Cluster
    # ipFamilies:
    # - IPv4
    # ipFamilyPolicy: SingleStack
    # sessionAffinity: None
    # type: LoadBalancer
# status:
#   loadBalancer: {}
