cluster/gallery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gallery
  namespace: backend
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-nginx

spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - api.dreampuppy.com.br
  #   secretName: letsencrypt-nginx
  rules:
  # - host: api.dreampuppy.com.br
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gallery
            port:
              number: 80
